--- a/README
+++ b/README
@@ -1,4 +1,14 @@
 ### Assignment 3 (COMP30670)
 
-"number of occupied seats 400410"
+Seating Chart Program Version 1.3 02/29/2016
+Author: Romain Ducarrouge
+
+The project in this folder is in python 3.5.1
+The program takes a .txt file as input in order to receive seats related commands.
+The program computes the necessary changes to the seats set up in order to retrieve 
+the final number of available seats in the seating area.
+
+Results: "number of occupied seats 400410"
+
+Link to GitHub repository : https://github.com/DucarrougeR/Event-Seating-Assignment
 
